--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
   <header>
     <h1>My Photos</h1>
   </header>
-  
-  <div class="container"></div>
+
+  <div class="container">
+    <div id="img_unit">
+      <div class="photo">
+        <img src="img/image-1.jpg">
+        <div class="inner"><p>comment1 <span>nickname</span></p></div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
