--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Coming+Soon&display=swap" rel="stylesheet">
   <title>My Photos</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
@@ -13,7 +17,7 @@
   <div class="container">
     <div id="img_unit">
       <div class="photo">
-        <img src="img/image-1.jpg">
+        <img src="image/image-1.jpg">
         <div class="inner"><p>comment1 <span>nickname</span></p></div>
       </div>
     </div>
