--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Coming+Soon&display=swap" rel="stylesheet">
-  <title>My Photos</title>
+  <title>Sample Photos</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
-    <h1>My Photos</h1>
+    <h1>Power AppsのGallery的な</h1>
   </header>
 
   <div class="container">
