--- a/index.html
+++ b/index.html
@@ -15,12 +15,9 @@
   </header>
 
   <div class="container">
-    <div id="img_unit">
-      <div class="photo">
-        <img src="image/image-1.jpg">
-        <div class="inner"><p>comment1 <span>nickname</span></p></div>
-      </div>
-    </div>
+    <div id="img_unit"></div>
   </div>
+
+  <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
